@@ -4613,6 +4613,8 @@ extern int build_feature_list(struct job_record *job_ptr)
 			}
 			feat = xmalloc(sizeof(job_feature_t));
 			feat->name = xstrdup(feature);
+			feat->changeable = node_features_g_changeable_feature(
+							feature);
 			feat->count = count;
 			feat->paren = paren;
 			if (paren)
@@ -4641,6 +4643,8 @@ extern int build_feature_list(struct job_record *job_ptr)
 			}
 			feat = xmalloc(sizeof(job_feature_t));
 			feat->name = xstrdup(feature);
+			feat->changeable = node_features_g_changeable_feature(
+							feature);
 			feat->count = count;
 			feat->paren = paren;
 			if (paren)
@@ -4691,6 +4695,8 @@ extern int build_feature_list(struct job_record *job_ptr)
 			if (feature) {
 				feat = xmalloc(sizeof(job_feature_t));
 				feat->name = xstrdup(feature);
+				feat->changeable = node_features_g_changeable_feature(
+								feature);
 				feat->count = count;
 				feat->paren = paren;
 				feat->op_code = FEATURE_OP_END;
